--- a/MediaBrowser.Server.Implementations/Localization/Core/pl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/pl.json
@@ -1,177 +1,177 @@
 {
-    "AppDeviceValues": "App: {0}, Device: {1}",
-    "UserDownloadingItemWithValues": "{0} is downloading {1}",
-    "FolderTypeMixed": "Mixed content",
-    "FolderTypeMovies": "Movies",
-    "FolderTypeMusic": "Music",
-    "FolderTypeAdultVideos": "Adult videos",
-    "FolderTypePhotos": "Photos",
-    "FolderTypeMusicVideos": "Music videos",
-    "FolderTypeHomeVideos": "Home videos",
-    "FolderTypeGames": "Games",
-    "FolderTypeBooks": "Books",
+    "AppDeviceValues": "Aplikacja: {0}, Urz\u0105dzenie: {1}",
+    "UserDownloadingItemWithValues": "{0} pobiera {1}",
+    "FolderTypeMixed": "Zawarto\u015b\u0107 mieszana",
+    "FolderTypeMovies": "Filmy",
+    "FolderTypeMusic": "Muzyka",
+    "FolderTypeAdultVideos": "Filmy dla doros\u0142ych",
+    "FolderTypePhotos": "Zdj\u0119cia",
+    "FolderTypeMusicVideos": "Teledyski",
+    "FolderTypeHomeVideos": "Filmy domowe",
+    "FolderTypeGames": "Gry",
+    "FolderTypeBooks": "Ksi\u0105\u017cki",
     "FolderTypeTvShows": "TV",
-    "FolderTypeInherit": "Inherit",
-    "HeaderCastCrew": "Cast & Crew",
-    "HeaderPeople": "People",
+    "FolderTypeInherit": "Dziedzicz",
+    "HeaderCastCrew": "Obsada & Eikpa",
+    "HeaderPeople": "Ludzie",
     "ValueSpecialEpisodeName": "Special - {0}",
-    "LabelChapterName": "Chapter {0}",
-    "NameSeasonNumber": "Season {0}",
-    "LabelExit": "Wyj\u015b\u0107",
+    "LabelChapterName": "Rozdzia\u0142 {0}",
+    "NameSeasonNumber": "Sezon {0}",
+    "LabelExit": "Wyj\u015bcie",
     "LabelVisitCommunity": "Odwied\u017a spo\u0142eczno\u015b\u0107",
     "LabelGithub": "Github",
-    "LabelApiDocumentation": "Api Documentation",
-    "LabelDeveloperResources": "Developer Resources",
-    "LabelBrowseLibrary": "Przejrzyj bibliotek\u0119",
-    "LabelConfigureServer": "Configure Emby",
-    "LabelRestartServer": "Uruchom serwer ponownie",
+    "LabelApiDocumentation": "Dokumantacja API",
+    "LabelDeveloperResources": "Materia\u0142y dla deweloper\u00f3w",
+    "LabelBrowseLibrary": "Przegl\u0105daj bibliotek\u0119",
+    "LabelConfigureServer": "Konfiguracja Emby",
+    "LabelRestartServer": "Restart serwera",
     "CategorySync": "Sync",
-    "CategoryUser": "User",
+    "CategoryUser": "U\u017cytkownik",
     "CategorySystem": "System",
-    "CategoryApplication": "Application",
-    "CategoryPlugin": "Plugin",
-    "NotificationOptionPluginError": "Plugin failure",
-    "NotificationOptionApplicationUpdateAvailable": "Application update available",
-    "NotificationOptionApplicationUpdateInstalled": "Application update installed",
-    "NotificationOptionPluginUpdateInstalled": "Plugin update installed",
-    "NotificationOptionPluginInstalled": "Plugin installed",
-    "NotificationOptionPluginUninstalled": "Plugin uninstalled",
-    "NotificationOptionVideoPlayback": "Video playback started",
-    "NotificationOptionAudioPlayback": "Audio playback started",
-    "NotificationOptionGamePlayback": "Game playback started",
-    "NotificationOptionVideoPlaybackStopped": "Video playback stopped",
-    "NotificationOptionAudioPlaybackStopped": "Audio playback stopped",
-    "NotificationOptionGamePlaybackStopped": "Game playback stopped",
-    "NotificationOptionTaskFailed": "Scheduled task failure",
-    "NotificationOptionInstallationFailed": "Installation failure",
-    "NotificationOptionNewLibraryContent": "New content added",
-    "NotificationOptionNewLibraryContentMultiple": "New content added (multiple)",
-    "NotificationOptionCameraImageUploaded": "Camera image uploaded",
-    "NotificationOptionUserLockedOut": "User locked out",
-    "NotificationOptionServerRestartRequired": "Server restart required",
-    "ViewTypePlaylists": "Playlists",
-    "ViewTypeMovies": "Movies",
+    "CategoryApplication": "Aplikacja",
+    "CategoryPlugin": "Wtyczka",
+    "NotificationOptionPluginError": "Niepowodzenie wtyczki",
+    "NotificationOptionApplicationUpdateAvailable": "Dost\u0119pna aktualizacja aplikacji",
+    "NotificationOptionApplicationUpdateInstalled": "Zainstalowano aktualizacj\u0119 aplikacji",
+    "NotificationOptionPluginUpdateInstalled": "Zainstalowano aktualizacj\u0119 wtyczki",
+    "NotificationOptionPluginInstalled": "Zainstalowano wtyczk\u0119",
+    "NotificationOptionPluginUninstalled": "Odinstalowano wtyczk\u0119",
+    "NotificationOptionVideoPlayback": "Rozpocz\u0119to odtwarzanie wideo",
+    "NotificationOptionAudioPlayback": "Rozpocz\u0119to odtwarzanie audio",
+    "NotificationOptionGamePlayback": "Odtwarzanie gry rozpocz\u0119te",
+    "NotificationOptionVideoPlaybackStopped": "Odtwarzanie wideo zatrzymane",
+    "NotificationOptionAudioPlaybackStopped": "Odtwarzane audio zatrzymane",
+    "NotificationOptionGamePlaybackStopped": "Odtwarzanie gry zatrzymane",
+    "NotificationOptionTaskFailed": "Niepowodzenie zaplanowanego zadania",
+    "NotificationOptionInstallationFailed": "Niepowodzenie instalacji",
+    "NotificationOptionNewLibraryContent": "Nowa zawarto\u015b\u0107 dodana",
+    "NotificationOptionNewLibraryContentMultiple": "Nowa zawarto\u015b\u0107 dodana (wiele)",
+    "NotificationOptionCameraImageUploaded": "Obraz z Kamery dodany",
+    "NotificationOptionUserLockedOut": "U\u017cytkownik zablokowany",
+    "NotificationOptionServerRestartRequired": "Restart serwera wymagany",
+    "ViewTypePlaylists": "Playlisty",
+    "ViewTypeMovies": "Filmy",
     "ViewTypeTvShows": "TV",
-    "ViewTypeGames": "Games",
-    "ViewTypeMusic": "Music",
-    "ViewTypeMusicGenres": "Genres",
-    "ViewTypeMusicArtists": "Artists",
-    "ViewTypeBoxSets": "Collections",
-    "ViewTypeChannels": "Channels",
-    "ViewTypeLiveTV": "Live TV",
-    "ViewTypeLiveTvNowPlaying": "Now Airing",
-    "ViewTypeLatestGames": "Latest Games",
-    "ViewTypeRecentlyPlayedGames": "Recently Played",
-    "ViewTypeGameFavorites": "Favorites",
-    "ViewTypeGameSystems": "Game Systems",
-    "ViewTypeGameGenres": "Genres",
-    "ViewTypeTvResume": "Resume",
-    "ViewTypeTvNextUp": "Next Up",
-    "ViewTypeTvLatest": "Latest",
-    "ViewTypeTvShowSeries": "Series",
-    "ViewTypeTvGenres": "Genres",
-    "ViewTypeTvFavoriteSeries": "Favorite Series",
-    "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
-    "ViewTypeMovieResume": "Resume",
-    "ViewTypeMovieLatest": "Latest",
-    "ViewTypeMovieMovies": "Movies",
-    "ViewTypeMovieCollections": "Collections",
-    "ViewTypeMovieFavorites": "Favorites",
-    "ViewTypeMovieGenres": "Genres",
-    "ViewTypeMusicLatest": "Latest",
-    "ViewTypeMusicPlaylists": "Playlists",
-    "ViewTypeMusicAlbums": "Albums",
-    "ViewTypeMusicAlbumArtists": "Album Artists",
-    "HeaderOtherDisplaySettings": "Display Settings",
-    "ViewTypeMusicSongs": "Songs",
-    "ViewTypeMusicFavorites": "Favorites",
-    "ViewTypeMusicFavoriteAlbums": "Favorite Albums",
-    "ViewTypeMusicFavoriteArtists": "Favorite Artists",
-    "ViewTypeMusicFavoriteSongs": "Favorite Songs",
-    "ViewTypeFolders": "Folders",
-    "ViewTypeLiveTvRecordingGroups": "Recordings",
-    "ViewTypeLiveTvChannels": "Channels",
-    "ScheduledTaskFailedWithName": "{0} failed",
-    "LabelRunningTimeValue": "Running time: {0}",
-    "ScheduledTaskStartedWithName": "{0} started",
+    "ViewTypeGames": "Gry",
+    "ViewTypeMusic": "Muzyka",
+    "ViewTypeMusicGenres": "Gatunki",
+    "ViewTypeMusicArtists": "Arty\u015bci",
+    "ViewTypeBoxSets": "Kolekcje",
+    "ViewTypeChannels": "Kana\u0142y",
+    "ViewTypeLiveTV": "TV Na \u017bywo",
+    "ViewTypeLiveTvNowPlaying": "Teraz Transmitowane",
+    "ViewTypeLatestGames": "Ostatnie Gry",
+    "ViewTypeRecentlyPlayedGames": "Ostatnio Odtwarzane",
+    "ViewTypeGameFavorites": "Ulubione",
+    "ViewTypeGameSystems": "Systemy Gier Wideo",
+    "ViewTypeGameGenres": "Gatunki",
+    "ViewTypeTvResume": "Wzn\u00f3w",
+    "ViewTypeTvNextUp": "Nast\u0119pny",
+    "ViewTypeTvLatest": "Najnowsze",
+    "ViewTypeTvShowSeries": "Seriale",
+    "ViewTypeTvGenres": "Gatunki",
+    "ViewTypeTvFavoriteSeries": "Ulubione Seriale",
+    "ViewTypeTvFavoriteEpisodes": "Ulubione Odcinki",
+    "ViewTypeMovieResume": "Wzn\u00f3w",
+    "ViewTypeMovieLatest": "Najnowsze",
+    "ViewTypeMovieMovies": "Filmy",
+    "ViewTypeMovieCollections": "Kolekcje",
+    "ViewTypeMovieFavorites": "Ulubione",
+    "ViewTypeMovieGenres": "Gatunki",
+    "ViewTypeMusicLatest": "Najnowsze",
+    "ViewTypeMusicPlaylists": "Playlisty",
+    "ViewTypeMusicAlbums": "Albumy",
+    "ViewTypeMusicAlbumArtists": "Arty\u015bci albumu",
+    "HeaderOtherDisplaySettings": "Ustawienia Wy\u015bwietlania",
+    "ViewTypeMusicSongs": "Utwory",
+    "ViewTypeMusicFavorites": "Ulubione",
+    "ViewTypeMusicFavoriteAlbums": "Ulubione Albumy",
+    "ViewTypeMusicFavoriteArtists": "Ulubieni Arty\u015bci",
+    "ViewTypeMusicFavoriteSongs": "Ulubione Utwory",
+    "ViewTypeFolders": "Foldery",
+    "ViewTypeLiveTvRecordingGroups": "Nagrania",
+    "ViewTypeLiveTvChannels": "Kana\u0142y",
+    "ScheduledTaskFailedWithName": "{0} niepowodze\u0144",
+    "LabelRunningTimeValue": "Czas trwania: {0}",
+    "ScheduledTaskStartedWithName": "{0} rozpocz\u0119te",
     "VersionNumber": "Wersja {0}",
-    "PluginInstalledWithName": "{0} was installed",
-    "PluginUpdatedWithName": "{0} was updated",
-    "PluginUninstalledWithName": "{0} was uninstalled",
-    "ItemAddedWithName": "{0} was added to the library",
-    "ItemRemovedWithName": "{0} was removed from the library",
-    "LabelIpAddressValue": "Ip address: {0}",
-    "DeviceOnlineWithName": "{0} is connected",
-    "UserOnlineFromDevice": "{0} is online from {1}",
-    "ProviderValue": "Provider: {0}",
-    "SubtitlesDownloadedForItem": "Subtitles downloaded for {0}",
-    "UserConfigurationUpdatedWithName": "User configuration has been updated for {0}",
-    "UserCreatedWithName": "User {0} has been created",
-    "UserPasswordChangedWithName": "Password has been changed for user {0}",
-    "UserDeletedWithName": "User {0} has been deleted",
-    "MessageServerConfigurationUpdated": "Server configuration has been updated",
-    "MessageNamedServerConfigurationUpdatedWithValue": "Server configuration section {0} has been updated",
-    "MessageApplicationUpdated": "Emby Server has been updated",
-    "FailedLoginAttemptWithUserName": "Failed login attempt from {0}",
-    "AuthenticationSucceededWithUserName": "{0} successfully authenticated",
-    "DeviceOfflineWithName": "{0} has disconnected",
-    "UserLockedOutWithName": "User {0} has been locked out",
-    "UserOfflineFromDevice": "{0} has disconnected from {1}",
-    "UserStartedPlayingItemWithValues": "{0} has started playing {1}",
-    "UserStoppedPlayingItemWithValues": "{0} has stopped playing {1}",
-    "SubtitleDownloadFailureForItem": "Subtitles failed to download for {0}",
-    "HeaderUnidentified": "Unidentified",
-    "HeaderImagePrimary": "Primary",
-    "HeaderImageBackdrop": "Backdrop",
+    "PluginInstalledWithName": "{0} zainstalowanych",
+    "PluginUpdatedWithName": "{0} zaktualizowanych",
+    "PluginUninstalledWithName": "{0} odinstalowanych",
+    "ItemAddedWithName": "{0} dodanych do biblioteki",
+    "ItemRemovedWithName": "{0} usuni\u0119tych z biblioteki",
+    "LabelIpAddressValue": "Adres IP: {0}",
+    "DeviceOnlineWithName": "{0} po\u0142\u0105czonych",
+    "UserOnlineFromDevice": "{0} jest online od {1}",
+    "ProviderValue": "Dostawca: {0}",
+    "SubtitlesDownloadedForItem": "Napisy pobrane dla {0}",
+    "UserConfigurationUpdatedWithName": "Konfiguracja u\u017cytkownika zosta\u0142a zaktualizowana dla {0}",
+    "UserCreatedWithName": "U\u017cytkownik {0} zosta\u0142 utworzony",
+    "UserPasswordChangedWithName": "Has\u0142o zosta\u0142o zmienione dla u\u017cytkownika {0}",
+    "UserDeletedWithName": "u\u017cytkownik {0} zosta\u0142 usuni\u0119ty",
+    "MessageServerConfigurationUpdated": "Konfiguracja serwera zosta\u0142a zaktualizowana",
+    "MessageNamedServerConfigurationUpdatedWithValue": "Sekcja {0} konfiguracji serwera zosta\u0142a zaktualizowana",
+    "MessageApplicationUpdated": "Serwer Emby zosta\u0142 zaktualizowany",
+    "FailedLoginAttemptWithUserName": "Nieudana pr\u00f3ba logowania z {0}",
+    "AuthenticationSucceededWithUserName": "{0} zaktualizowanych z powodzeniem",
+    "DeviceOfflineWithName": "{0} zosta\u0142o od\u0142aczonych",
+    "UserLockedOutWithName": "U\u017cytkownik {0} zosta\u0142 zablokowany",
+    "UserOfflineFromDevice": "{0} zosta\u0142o od\u0142\u0105czonych od {1}",
+    "UserStartedPlayingItemWithValues": "{0} rozpocz\u0105\u0142 odtwarzanie {1}",
+    "UserStoppedPlayingItemWithValues": "{0} zatrzyma\u0142 odtwarzanie {1}",
+    "SubtitleDownloadFailureForItem": "Napisy niepobrane dla {0}",
+    "HeaderUnidentified": "Niezidentyfikowane",
+    "HeaderImagePrimary": "Priorytetowy",
+    "HeaderImageBackdrop": "Obraz t\u0142a",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image",
-    "HeaderOverview": "Overview",
-    "HeaderShortOverview": "Short Overview",
-    "HeaderType": "Type",
-    "HeaderSeverity": "Severity",
-    "HeaderUser": "User",
-    "HeaderName": "Name",
-    "HeaderDate": "Date",
-    "HeaderPremiereDate": "Premiere Date",
-    "HeaderDateAdded": "Date Added",
-    "HeaderReleaseDate": "Release date",
-    "HeaderRuntime": "Runtime",
+    "HeaderUserPrimaryImage": "Avatar u\u017cytkownika",
+    "HeaderOverview": "Opis",
+    "HeaderShortOverview": "Kr\u00f3tki Opis",
+    "HeaderType": "Typ",
+    "HeaderSeverity": "Rygor",
+    "HeaderUser": "U\u017cytkownik",
+    "HeaderName": "Nazwa",
+    "HeaderDate": "Data",
+    "HeaderPremiereDate": "Data premiery",
+    "HeaderDateAdded": "Data dodania",
+    "HeaderReleaseDate": "Data wydania",
+    "HeaderRuntime": "D\u0142ugo\u015b\u0107 filmu",
     "HeaderPlayCount": "Play Count",
-    "HeaderSeason": "Season",
-    "HeaderSeasonNumber": "Season number",
-    "HeaderSeries": "Series:",
-    "HeaderNetwork": "Network",
-    "HeaderYear": "Year:",
-    "HeaderYears": "Years:",
+    "HeaderSeason": "Sezon",
+    "HeaderSeasonNumber": "Numer sezonu",
+    "HeaderSeries": "Seriale:",
+    "HeaderNetwork": "Sie\u0107",
+    "HeaderYear": "Rok:",
+    "HeaderYears": "Lata:",
     "HeaderParentalRating": "Parental Rating",
-    "HeaderCommunityRating": "Community rating",
-    "HeaderTrailers": "Trailers",
-    "HeaderSpecials": "Specials",
-    "HeaderGameSystems": "Game Systems",
+    "HeaderCommunityRating": "Ocena spo\u0142eczno\u015bci",
+    "HeaderTrailers": "Zwiastuny",
+    "HeaderSpecials": "Specjalne",
+    "HeaderGameSystems": "Systemy gier",
     "HeaderPlayers": "Players:",
     "HeaderAlbumArtists": "Album Artists",
     "HeaderAlbums": "Albums",
-    "HeaderDisc": "Disc",
-    "HeaderTrack": "Track",
+    "HeaderDisc": "P\u0142yta",
+    "HeaderTrack": "\u015acie\u017cka",
     "HeaderAudio": "Audio",
-    "HeaderVideo": "Video",
-    "HeaderEmbeddedImage": "Embedded image",
-    "HeaderResolution": "Resolution",
-    "HeaderSubtitles": "Subtitles",
-    "HeaderGenres": "Genres",
-    "HeaderCountries": "Countries",
+    "HeaderVideo": "Wideo",
+    "HeaderEmbeddedImage": "Osadzony obraz",
+    "HeaderResolution": "Rozdzielczo\u015b\u0107",
+    "HeaderSubtitles": "Napisy",
+    "HeaderGenres": "Gatunki",
+    "HeaderCountries": "Kraje",
     "HeaderStatus": "Status",
     "HeaderTracks": "Tracks",
-    "HeaderMusicArtist": "Music artist",
-    "HeaderLocked": "Locked",
-    "HeaderStudios": "Studios",
-    "HeaderActor": "Actors",
-    "HeaderComposer": "Composers",
-    "HeaderDirector": "Directors",
-    "HeaderGuestStar": "Guest star",
-    "HeaderProducer": "Producers",
-    "HeaderWriter": "Writers",
-    "HeaderParentalRatings": "Parental Ratings",
-    "HeaderCommunityRatings": "Community ratings",
-    "StartupEmbyServerIsLoading": "Emby Server is loading. Please try again shortly."
+    "HeaderMusicArtist": "Wykonawcy muzyczni",
+    "HeaderLocked": "Zablokowane",
+    "HeaderStudios": "Studia",
+    "HeaderActor": "Aktorzy",
+    "HeaderComposer": "Kopozytorzy",
+    "HeaderDirector": "Re\u017cyszerzy",
+    "HeaderGuestStar": "Go\u015b\u0107 specjalny",
+    "HeaderProducer": "Producenci",
+    "HeaderWriter": "Scenarzy\u015bci",
+    "HeaderParentalRatings": "Ocena rodzicielska",
+    "HeaderCommunityRatings": "Ocena spo\u0142eczno\u015bci",
+    "StartupEmbyServerIsLoading": "Serwer Emby si\u0119 \u0142aduje. Prosz\u0119 spr\u00f3bowa\u0107 za chwil\u0119."
 }
