--- a/MediaBrowser.Server.Implementations/Localization/Core/ca.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/ca.json
@@ -12,7 +12,7 @@
     "FolderTypeBooks": "Books",
     "FolderTypeTvShows": "TV",
     "FolderTypeInherit": "Heretat",
-    "HeaderCastCrew": "Cast & Crew",
+    "HeaderCastCrew": "Repartiment i equip",
     "HeaderPeople": "People",
     "ValueSpecialEpisodeName": "Special - {0}",
     "LabelChapterName": "Chapter {0}",
@@ -26,16 +26,16 @@
     "LabelConfigureServer": "Configura Emby",
     "LabelRestartServer": "Reiniciar el servidor",
     "CategorySync": "Sync",
-    "CategoryUser": "User",
-    "CategorySystem": "System",
-    "CategoryApplication": "Application",
-    "CategoryPlugin": "Plugin",
+    "CategoryUser": "Usuari",
+    "CategorySystem": "Sistema",
+    "CategoryApplication": "Aplicaci\u00f3",
+    "CategoryPlugin": "Complement",
     "NotificationOptionPluginError": "Plugin failure",
     "NotificationOptionApplicationUpdateAvailable": "Application update available",
     "NotificationOptionApplicationUpdateInstalled": "Application update installed",
     "NotificationOptionPluginUpdateInstalled": "Plugin update installed",
-    "NotificationOptionPluginInstalled": "Plugin installed",
-    "NotificationOptionPluginUninstalled": "Plugin uninstalled",
+    "NotificationOptionPluginInstalled": "Complement instal\u00b7lat",
+    "NotificationOptionPluginUninstalled": "Complement desinstal\u00b7lat",
     "NotificationOptionVideoPlayback": "Video playback started",
     "NotificationOptionAudioPlayback": "Audio playback started",
     "NotificationOptionGamePlayback": "Game playback started",
@@ -50,33 +50,33 @@
     "NotificationOptionUserLockedOut": "User locked out",
     "NotificationOptionServerRestartRequired": "Server restart required",
     "ViewTypePlaylists": "Llistes de reproducci\u00f3",
-    "ViewTypeMovies": "Movies",
+    "ViewTypeMovies": "Pel\u00b7l\u00edcules",
     "ViewTypeTvShows": "TV",
-    "ViewTypeGames": "Games",
-    "ViewTypeMusic": "Music",
-    "ViewTypeMusicGenres": "Genres",
-    "ViewTypeMusicArtists": "Artists",
+    "ViewTypeGames": "Jocs",
+    "ViewTypeMusic": "M\u00fasica",
+    "ViewTypeMusicGenres": "G\u00e8neres",
+    "ViewTypeMusicArtists": "Artistes",
     "ViewTypeBoxSets": "Col\u00b7leccions",
-    "ViewTypeChannels": "Channels",
+    "ViewTypeChannels": "Canals",
     "ViewTypeLiveTV": "TV en Directe",
     "ViewTypeLiveTvNowPlaying": "Now Airing",
-    "ViewTypeLatestGames": "Latest Games",
+    "ViewTypeLatestGames": "Darrers Jocs",
     "ViewTypeRecentlyPlayedGames": "Reprodu\u00eft Recentment",
     "ViewTypeGameFavorites": "Preferits",
-    "ViewTypeGameSystems": "Game Systems",
-    "ViewTypeGameGenres": "Genres",
+    "ViewTypeGameSystems": "Sistemes de Jocs",
+    "ViewTypeGameGenres": "G\u00e8neres",
     "ViewTypeTvResume": "Resume",
     "ViewTypeTvNextUp": "A Continuaci\u00f3",
-    "ViewTypeTvLatest": "Latest",
-    "ViewTypeTvShowSeries": "Series",
-    "ViewTypeTvGenres": "Genres",
+    "ViewTypeTvLatest": "Darrers",
+    "ViewTypeTvShowSeries": "S\u00e8ries:",
+    "ViewTypeTvGenres": "G\u00e8neres",
     "ViewTypeTvFavoriteSeries": "S\u00e8ries Preferides",
-    "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
+    "ViewTypeTvFavoriteEpisodes": "Episodis preferits",
     "ViewTypeMovieResume": "Resume",
-    "ViewTypeMovieLatest": "Latest",
-    "ViewTypeMovieMovies": "Movies",
+    "ViewTypeMovieLatest": "Darrers",
+    "ViewTypeMovieMovies": "Pel\u00b7l\u00edcules",
     "ViewTypeMovieCollections": "Col\u00b7leccions",
-    "ViewTypeMovieFavorites": "Favorites",
+    "ViewTypeMovieFavorites": "Preferits",
     "ViewTypeMovieGenres": "Genres",
     "ViewTypeMusicLatest": "Latest",
     "ViewTypeMusicPlaylists": "Llistes de reproducci\u00f3",
@@ -129,26 +129,26 @@
     "HeaderShortOverview": "Short Overview",
     "HeaderType": "Type",
     "HeaderSeverity": "Severity",
-    "HeaderUser": "User",
+    "HeaderUser": "Usuari",
     "HeaderName": "Name",
-    "HeaderDate": "Date",
+    "HeaderDate": "Data",
     "HeaderPremiereDate": "Premiere Date",
-    "HeaderDateAdded": "Date Added",
+    "HeaderDateAdded": "Data afegida",
     "HeaderReleaseDate": "Release date",
     "HeaderRuntime": "Runtime",
     "HeaderPlayCount": "Play Count",
     "HeaderSeason": "Temporada",
     "HeaderSeasonNumber": "Season number",
-    "HeaderSeries": "Series:",
+    "HeaderSeries": "S\u00e8ries:",
     "HeaderNetwork": "Network",
-    "HeaderYear": "Year:",
-    "HeaderYears": "Years:",
+    "HeaderYear": "Any:",
+    "HeaderYears": "Anys:",
     "HeaderParentalRating": "Parental Rating",
     "HeaderCommunityRating": "Community rating",
     "HeaderTrailers": "Trailers",
     "HeaderSpecials": "Specials",
-    "HeaderGameSystems": "Game Systems",
-    "HeaderPlayers": "Players:",
+    "HeaderGameSystems": "Sistemes de Jocs",
+    "HeaderPlayers": "Jugadors:",
     "HeaderAlbumArtists": "Album Artists",
     "HeaderAlbums": "Albums",
     "HeaderDisc": "Disc",
@@ -162,16 +162,16 @@
     "HeaderCountries": "Countries",
     "HeaderStatus": "Estat",
     "HeaderTracks": "Tracks",
-    "HeaderMusicArtist": "Music artist",
+    "HeaderMusicArtist": "Musics",
     "HeaderLocked": "Locked",
     "HeaderStudios": "Studios",
     "HeaderActor": "Actors",
-    "HeaderComposer": "Composers",
+    "HeaderComposer": "Compositors",
     "HeaderDirector": "Directors",
     "HeaderGuestStar": "Artista convidat",
-    "HeaderProducer": "Producers",
-    "HeaderWriter": "Writers",
+    "HeaderProducer": "Productors",
+    "HeaderWriter": "Escriptors",
     "HeaderParentalRatings": "Parental Ratings",
-    "HeaderCommunityRatings": "Community ratings",
-    "StartupEmbyServerIsLoading": "Emby Server is loading. Please try again shortly."
+    "HeaderCommunityRatings": "Qualificacions de la comunitat",
+    "StartupEmbyServerIsLoading": "El servidor d'Emby s'est\u00e0 carregant. Si us plau, torneu-ho a provar de nou en breu."
 }
