--- a/MediaBrowser.Server.Implementations/Localization/Core/hu.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/hu.json
@@ -2,40 +2,40 @@
     "AppDeviceValues": "App: {0}, Device: {1}",
     "UserDownloadingItemWithValues": "{0} is downloading {1}",
     "FolderTypeMixed": "Mixed content",
-    "FolderTypeMovies": "Pel\u00b7l\u00edcules",
-    "FolderTypeMusic": "M\u00fasica",
+    "FolderTypeMovies": "Movies",
+    "FolderTypeMusic": "Music",
     "FolderTypeAdultVideos": "Adult videos",
-    "FolderTypePhotos": "Fotos",
-    "FolderTypeMusicVideos": "V\u00eddeos musicals",
-    "FolderTypeHomeVideos": "V\u00eddeos dom\u00e8stics",
-    "FolderTypeGames": "Jocs",
-    "FolderTypeBooks": "Llibres",
+    "FolderTypePhotos": "Photos",
+    "FolderTypeMusicVideos": "Music videos",
+    "FolderTypeHomeVideos": "Home videos",
+    "FolderTypeGames": "Games",
+    "FolderTypeBooks": "Books",
     "FolderTypeTvShows": "TV",
-    "FolderTypeInherit": "Heretat",
-    "HeaderCastCrew": "Repartiment i equip",
+    "FolderTypeInherit": "Inherit",
+    "HeaderCastCrew": "Cast & Crew",
     "HeaderPeople": "People",
     "ValueSpecialEpisodeName": "Special - {0}",
     "LabelChapterName": "Chapter {0}",
-    "NameSeasonNumber": "Temporada {0}",
-    "LabelExit": "Sortir",
-    "LabelVisitCommunity": "Visita la comunitat",
+    "NameSeasonNumber": "Season {0}",
+    "LabelExit": "Kil\u00e9p\u00e9s",
+    "LabelVisitCommunity": "K\u00f6z\u00f6ss\u00e9g",
     "LabelGithub": "Github",
-    "LabelApiDocumentation": "Documentaci\u00f3 de l'API",
-    "LabelDeveloperResources": "Recursos per a programadors",
-    "LabelBrowseLibrary": "Examina la biblioteca",
-    "LabelConfigureServer": "Configura Emby",
-    "LabelRestartServer": "Reiniciar Servidor",
+    "LabelApiDocumentation": "Api dokument\u00e1ci\u00f3",
+    "LabelDeveloperResources": "Fejleszt\u0151i eszk\u00f6z\u00f6k",
+    "LabelBrowseLibrary": "M\u00e9diat\u00e1r tall\u00f3z\u00e1sa",
+    "LabelConfigureServer": "Emby konfigur\u00e1l\u00e1sa",
+    "LabelRestartServer": "Szerver \u00fajraindit\u00e1sa",
     "CategorySync": "Sync",
-    "CategoryUser": "Usuari",
-    "CategorySystem": "Sistema",
-    "CategoryApplication": "Aplicaci\u00f3",
-    "CategoryPlugin": "Complement",
+    "CategoryUser": "User",
+    "CategorySystem": "System",
+    "CategoryApplication": "Application",
+    "CategoryPlugin": "Plugin",
     "NotificationOptionPluginError": "Plugin failure",
     "NotificationOptionApplicationUpdateAvailable": "Application update available",
     "NotificationOptionApplicationUpdateInstalled": "Application update installed",
     "NotificationOptionPluginUpdateInstalled": "Plugin update installed",
-    "NotificationOptionPluginInstalled": "Complement instal\u00b7lat",
-    "NotificationOptionPluginUninstalled": "Complement desinstal\u00b7lat",
+    "NotificationOptionPluginInstalled": "Plugin installed",
+    "NotificationOptionPluginUninstalled": "Plugin uninstalled",
     "NotificationOptionVideoPlayback": "Video playback started",
     "NotificationOptionAudioPlayback": "Audio playback started",
     "NotificationOptionGamePlayback": "Game playback started",
@@ -44,62 +44,62 @@
     "NotificationOptionGamePlaybackStopped": "Game playback stopped",
     "NotificationOptionTaskFailed": "Scheduled task failure",
     "NotificationOptionInstallationFailed": "Installation failure",
-    "NotificationOptionNewLibraryContent": "Nou contingut afegit",
-    "NotificationOptionNewLibraryContentMultiple": "Nous continguts afegits",
+    "NotificationOptionNewLibraryContent": "New content added",
+    "NotificationOptionNewLibraryContentMultiple": "New content added (multiple)",
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
     "NotificationOptionUserLockedOut": "User locked out",
     "NotificationOptionServerRestartRequired": "Server restart required",
-    "ViewTypePlaylists": "Llistes de reproducci\u00f3",
-    "ViewTypeMovies": "Pel\u00b7l\u00edcules",
+    "ViewTypePlaylists": "Playlists",
+    "ViewTypeMovies": "Movies",
     "ViewTypeTvShows": "TV",
-    "ViewTypeGames": "Jocs",
-    "ViewTypeMusic": "M\u00fasica",
-    "ViewTypeMusicGenres": "G\u00e8neres",
-    "ViewTypeMusicArtists": "Artistes",
-    "ViewTypeBoxSets": "Col\u00b7leccions",
-    "ViewTypeChannels": "Canals",
-    "ViewTypeLiveTV": "TV en Directe",
+    "ViewTypeGames": "Games",
+    "ViewTypeMusic": "Music",
+    "ViewTypeMusicGenres": "Genres",
+    "ViewTypeMusicArtists": "Artists",
+    "ViewTypeBoxSets": "Collections",
+    "ViewTypeChannels": "Channels",
+    "ViewTypeLiveTV": "Live TV",
     "ViewTypeLiveTvNowPlaying": "Now Airing",
-    "ViewTypeLatestGames": "Darrers Jocs",
-    "ViewTypeRecentlyPlayedGames": "Reprodu\u00eft Recentment",
-    "ViewTypeGameFavorites": "Preferits",
-    "ViewTypeGameSystems": "Sistemes de Jocs",
-    "ViewTypeGameGenres": "G\u00e8neres",
+    "ViewTypeLatestGames": "Latest Games",
+    "ViewTypeRecentlyPlayedGames": "Recently Played",
+    "ViewTypeGameFavorites": "Favorites",
+    "ViewTypeGameSystems": "Game Systems",
+    "ViewTypeGameGenres": "Genres",
     "ViewTypeTvResume": "Resume",
-    "ViewTypeTvNextUp": "A Continuaci\u00f3",
-    "ViewTypeTvLatest": "Darrers",
-    "ViewTypeTvShowSeries": "S\u00e8ries:",
-    "ViewTypeTvGenres": "G\u00e8neres",
-    "ViewTypeTvFavoriteSeries": "S\u00e8ries Preferides",
-    "ViewTypeTvFavoriteEpisodes": "Episodis preferits",
+    "ViewTypeTvNextUp": "Next Up",
+    "ViewTypeTvLatest": "Latest",
+    "ViewTypeTvShowSeries": "Series",
+    "ViewTypeTvGenres": "Genres",
+    "ViewTypeTvFavoriteSeries": "Favorite Series",
+    "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
     "ViewTypeMovieResume": "Resume",
-    "ViewTypeMovieLatest": "Darrers",
-    "ViewTypeMovieMovies": "Pel\u00b7l\u00edcules",
-    "ViewTypeMovieCollections": "Col\u00b7leccions",
-    "ViewTypeMovieFavorites": "Preferides",
+    "ViewTypeMovieLatest": "Latest",
+    "ViewTypeMovieMovies": "Movies",
+    "ViewTypeMovieCollections": "Collections",
+    "ViewTypeMovieFavorites": "Favorites",
     "ViewTypeMovieGenres": "Genres",
-    "ViewTypeMusicLatest": "Novetats",
-    "ViewTypeMusicPlaylists": "Llistes de reproducci\u00f3",
-    "ViewTypeMusicAlbums": "\u00c0lbums",
+    "ViewTypeMusicLatest": "Latest",
+    "ViewTypeMusicPlaylists": "Playlists",
+    "ViewTypeMusicAlbums": "Albums",
     "ViewTypeMusicAlbumArtists": "Album Artists",
-    "HeaderOtherDisplaySettings": "Prefer\u00e8ncies de Visualitzaci\u00f3",
-    "ViewTypeMusicSongs": "Can\u00e7ons",
-    "ViewTypeMusicFavorites": "Preferides",
-    "ViewTypeMusicFavoriteAlbums": "\u00c0lbums Preferits",
-    "ViewTypeMusicFavoriteArtists": "Artistes Preferits",
-    "ViewTypeMusicFavoriteSongs": "Can\u00e7ons Preferides",
-    "ViewTypeFolders": "Directoris",
+    "HeaderOtherDisplaySettings": "Display Settings",
+    "ViewTypeMusicSongs": "Songs",
+    "ViewTypeMusicFavorites": "Favorites",
+    "ViewTypeMusicFavoriteAlbums": "Favorite Albums",
+    "ViewTypeMusicFavoriteArtists": "Favorite Artists",
+    "ViewTypeMusicFavoriteSongs": "Favorite Songs",
+    "ViewTypeFolders": "Folders",
     "ViewTypeLiveTvRecordingGroups": "Recordings",
-    "ViewTypeLiveTvChannels": "Canals",
+    "ViewTypeLiveTvChannels": "Channels",
     "ScheduledTaskFailedWithName": "{0} failed",
     "LabelRunningTimeValue": "Running time: {0}",
     "ScheduledTaskStartedWithName": "{0} started",
-    "VersionNumber": "Versi\u00f3 {0}",
+    "VersionNumber": "Version {0}",
     "PluginInstalledWithName": "{0} was installed",
     "PluginUpdatedWithName": "{0} was updated",
     "PluginUninstalledWithName": "{0} was uninstalled",
-    "ItemAddedWithName": "{0} afegit a la biblioteca",
-    "ItemRemovedWithName": "{0} eliminat de la biblioteca",
+    "ItemAddedWithName": "{0} was added to the library",
+    "ItemRemovedWithName": "{0} was removed from the library",
     "LabelIpAddressValue": "Ip address: {0}",
     "DeviceOnlineWithName": "{0} is connected",
     "UserOnlineFromDevice": "{0} is online from {1}",
@@ -129,49 +129,49 @@
     "HeaderShortOverview": "Short Overview",
     "HeaderType": "Type",
     "HeaderSeverity": "Severity",
-    "HeaderUser": "Usuari",
+    "HeaderUser": "User",
     "HeaderName": "Name",
-    "HeaderDate": "Data",
+    "HeaderDate": "Date",
     "HeaderPremiereDate": "Premiere Date",
-    "HeaderDateAdded": "Data afegida",
+    "HeaderDateAdded": "Date Added",
     "HeaderReleaseDate": "Release date",
     "HeaderRuntime": "Runtime",
     "HeaderPlayCount": "Play Count",
-    "HeaderSeason": "Temporada",
+    "HeaderSeason": "Season",
     "HeaderSeasonNumber": "Season number",
-    "HeaderSeries": "S\u00e8ries:",
+    "HeaderSeries": "Series:",
     "HeaderNetwork": "Network",
-    "HeaderYear": "Any:",
-    "HeaderYears": "Anys:",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
     "HeaderParentalRating": "Parental Rating",
     "HeaderCommunityRating": "Community rating",
-    "HeaderTrailers": "Tr\u00e0ilers",
+    "HeaderTrailers": "Trailers",
     "HeaderSpecials": "Specials",
-    "HeaderGameSystems": "Sistemes de Jocs",
-    "HeaderPlayers": "Jugadors:",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
     "HeaderAlbumArtists": "Album Artists",
     "HeaderAlbums": "Albums",
     "HeaderDisc": "Disc",
     "HeaderTrack": "Track",
-    "HeaderAudio": "\u00c0udio",
+    "HeaderAudio": "Audio",
     "HeaderVideo": "Video",
     "HeaderEmbeddedImage": "Embedded image",
     "HeaderResolution": "Resolution",
     "HeaderSubtitles": "Subtitles",
     "HeaderGenres": "Genres",
     "HeaderCountries": "Countries",
-    "HeaderStatus": "Estat",
+    "HeaderStatus": "\u00c1llapot",
     "HeaderTracks": "Tracks",
-    "HeaderMusicArtist": "M\u00fasic",
+    "HeaderMusicArtist": "Music artist",
     "HeaderLocked": "Locked",
     "HeaderStudios": "Studios",
     "HeaderActor": "Actors",
-    "HeaderComposer": "Compositors",
+    "HeaderComposer": "Composers",
     "HeaderDirector": "Directors",
-    "HeaderGuestStar": "Artista convidat",
-    "HeaderProducer": "Productors",
-    "HeaderWriter": "Escriptors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
     "HeaderParentalRatings": "Parental Ratings",
-    "HeaderCommunityRatings": "Qualificacions de la comunitat",
-    "StartupEmbyServerIsLoading": "El servidor d'Emby s'est\u00e0 carregant. Si us plau, torneu-ho a provar de nou en breu."
+    "HeaderCommunityRatings": "Community ratings",
+    "StartupEmbyServerIsLoading": "Emby Server is loading. Please try again shortly."
 }
