--- a/MediaBrowser.Server.Implementations/Localization/Core/pl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/pl.json
@@ -150,7 +150,7 @@
     "HeaderGameSystems": "Systemy gier",
     "HeaderPlayers": "Players:",
     "HeaderAlbumArtists": "Album Artists",
-    "HeaderAlbums": "Albums",
+    "HeaderAlbums": "Albumy",
     "HeaderDisc": "P\u0142yta",
     "HeaderTrack": "\u015acie\u017cka",
     "HeaderAudio": "Audio",
@@ -161,7 +161,7 @@
     "HeaderGenres": "Gatunki",
     "HeaderCountries": "Kraje",
     "HeaderStatus": "Status",
-    "HeaderTracks": "Tracks",
+    "HeaderTracks": "Utwory",
     "HeaderMusicArtist": "Wykonawcy muzyczni",
     "HeaderLocked": "Zablokowane",
     "HeaderStudios": "Studia",
