--- a/MediaBrowser.Server.Implementations/Localization/Core/ca.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/ca.json
@@ -31,24 +31,24 @@
     "CategoryApplication": "Aplicaci\u00f3",
     "CategoryPlugin": "Complement",
     "NotificationOptionPluginError": "Plugin failure",
-    "NotificationOptionApplicationUpdateAvailable": "Application update available",
-    "NotificationOptionApplicationUpdateInstalled": "Application update installed",
-    "NotificationOptionPluginUpdateInstalled": "Plugin update installed",
+    "NotificationOptionApplicationUpdateAvailable": "Actualitzaci\u00f3 d'aplicaci\u00f3 disponible",
+    "NotificationOptionApplicationUpdateInstalled": "Actualitzaci\u00f3 d'aplicaci\u00f3 instal\u00b7lada",
+    "NotificationOptionPluginUpdateInstalled": "Actualitzaci\u00f3 de complement instal\u00b7lada",
     "NotificationOptionPluginInstalled": "Complement instal\u00b7lat",
     "NotificationOptionPluginUninstalled": "Complement desinstal\u00b7lat",
-    "NotificationOptionVideoPlayback": "Video playback started",
-    "NotificationOptionAudioPlayback": "Audio playback started",
+    "NotificationOptionVideoPlayback": "Reproducci\u00f3 de v\u00eddeo iniciada",
+    "NotificationOptionAudioPlayback": "Reproducci\u00f3 d'\u00e0udio iniciada",
     "NotificationOptionGamePlayback": "Game playback started",
-    "NotificationOptionVideoPlaybackStopped": "Video playback stopped",
-    "NotificationOptionAudioPlaybackStopped": "Audio playback stopped",
+    "NotificationOptionVideoPlaybackStopped": "Reproducci\u00f3 de v\u00eddeo aturada",
+    "NotificationOptionAudioPlaybackStopped": "Reproducci\u00f3 d'\u00e0udio aturada",
     "NotificationOptionGamePlaybackStopped": "Game playback stopped",
-    "NotificationOptionTaskFailed": "Scheduled task failure",
-    "NotificationOptionInstallationFailed": "Installation failure",
+    "NotificationOptionTaskFailed": "Tasca programada fallida",
+    "NotificationOptionInstallationFailed": "Instal\u00b7laci\u00f3 fallida",
     "NotificationOptionNewLibraryContent": "Nou contingut afegit",
     "NotificationOptionNewLibraryContentMultiple": "Nous continguts afegits",
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
-    "NotificationOptionUserLockedOut": "User locked out",
-    "NotificationOptionServerRestartRequired": "Server restart required",
+    "NotificationOptionUserLockedOut": "Usuari blocat",
+    "NotificationOptionServerRestartRequired": "Cal reiniciar el servidor",
     "ViewTypePlaylists": "Llistes de reproducci\u00f3",
     "ViewTypeMovies": "Pel\u00b7l\u00edcules",
     "ViewTypeTvShows": "TV",
@@ -108,7 +108,7 @@
     "UserConfigurationUpdatedWithName": "User configuration has been updated for {0}",
     "UserCreatedWithName": "User {0} has been created",
     "UserPasswordChangedWithName": "Password has been changed for user {0}",
-    "UserDeletedWithName": "User {0} has been deleted",
+    "UserDeletedWithName": "L'usuari {0} ha estat eliminat",
     "MessageServerConfigurationUpdated": "Server configuration has been updated",
     "MessageNamedServerConfigurationUpdatedWithValue": "Server configuration section {0} has been updated",
     "MessageApplicationUpdated": "Emby Server has been updated",
@@ -134,7 +134,7 @@
     "HeaderDate": "Data",
     "HeaderPremiereDate": "Premiere Date",
     "HeaderDateAdded": "Data afegida",
-    "HeaderReleaseDate": "Release date",
+    "HeaderReleaseDate": "Data de publicaci\u00f3",
     "HeaderRuntime": "Runtime",
     "HeaderPlayCount": "Play Count",
     "HeaderSeason": "Temporada",
@@ -143,7 +143,7 @@
     "HeaderNetwork": "Network",
     "HeaderYear": "Any:",
     "HeaderYears": "Anys:",
-    "HeaderParentalRating": "Parental Rating",
+    "HeaderParentalRating": "Valoraci\u00f3 Parental",
     "HeaderCommunityRating": "Community rating",
     "HeaderTrailers": "Tr\u00e0ilers",
     "HeaderSpecials": "Specials",
