--- a/MediaBrowser.Server.Implementations/Localization/Core/pl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/pl.json
@@ -14,7 +14,7 @@
     "FolderTypeInherit": "Dziedzicz",
     "HeaderCastCrew": "Obsada & Eikpa",
     "HeaderPeople": "Ludzie",
-    "ValueSpecialEpisodeName": "Special - {0}",
+    "ValueSpecialEpisodeName": "Specjalny - {0}",
     "LabelChapterName": "Rozdzia\u0142 {0}",
     "NameSeasonNumber": "Sezon {0}",
     "LabelExit": "Wyj\u015bcie",
